logo da loja add, codigo base do quiz add, css da pagina contato add

--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -8,7 +8,7 @@
     <title>Contato</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
+<body class="contato">
 
     <nav>
         <ul>
