--- a/index.html
+++ b/index.html
@@ -3,9 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SpaceStore</title>
+    <link rel="icon" href="./src/assets/imgs/Favicon SpaceStore.jpg" type="image/jpeg">
+    <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Bem vindo à SpaceStore!</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="./src/pages/contato.html">Contato</a></li>
+            <li><a href="./src/pages/portifolio.html">Portfólio</a></li>
+            <li><a href="./src/pages/sobre.html">Sobre</a></li>
+            <li><a href="./src/pages/quiz.html">Quiz</a></li>
+        </ul>
+    </nav>
+    <main>
+        <section>
+            <h2>Nossos Produtos</h2>
+            <p>Explore nossa seleção de produtos espaciais exclusivos!</p>
+        </section>
+    </main>
+
+    <div class="produtos">
+        <h2>Produtos em Destaque</h2>
+        <div class="produto">
+            <img src="./src/assets/imgs/Caneca.png" alt="Caneca Constelar" class="amostra">
+            <h3>Caneca Constelar</h3>
+            <p>Descrição do Produto 1</p>
+            <div><a href="#">Comprar agora</a></div>
+        </div>
+        <div class="produto">
+            <img src="./src/assets/imgs/Mac.png" alt="Mac&cheese" class="amostra">
+            <h3>Mac&cheese de astronauta</h3>
+            <p>Descrição do Produto 2</p>
+            <div><a href="#">Comprar agora</a></div>
+        </div>
+        <div class="produto">
+            <img src="./src/assets/imgs/Telescopio.png" alt="Telescópio" class="amostra">
+            <h3>Telescópio Espacial</h3>
+            <p>Descrição do Produto 3</p>
+            <div><a href="#">Comprar agora</a></div>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2025 SpaceStore. Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
