Quiz feito com o tema, adicionei os botoes e cores em todos

--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -16,6 +16,11 @@
             <li><a href="./src/pages/sobre.html">Sobre</a></li>
             <li><a href="./src/pages/quiz.html">Quiz</a></li>
             <li><a href="./loja.html">loja</a></li>
+            <div>
+                    <input type="button" class="cor" onclick="trocar('#3ae4b1')"/>
+                    <input type="button" class="cor" onclick="trocar('#c13af2')"/>
+                    <input type="button" class="cor" onclick="trocar('#fbff24')"/>
+                </div>
         </ul>
     </nav>
 
@@ -65,5 +70,8 @@
         <a href="https://www.instagram.com/vinhariaagnello">Instagram</a> |
         <a href="https://www.facebook.com/vinhariaagnello">Facebook</a>
     </footer>
+
+     <script src="../js/color.js"></script>
+     <script src="../js/quiz.js"></script>
 </body>
 </html>
