--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
             <li><a href="./src/pages/sobre.html">Sobre</a></li>
             <li><a href="./src/pages/quiz.html">Quiz</a></li>
             <li><a href="./src/pages/loja.html">Loja</a></li>
+            <div>
+                    <input type="button" class="cor" onclick="trocar('#3ae4b1')"/>
+                    <input type="button" class="cor" onclick="trocar('#c13af2')"/>
+                    <input type="button" class="cor" onclick="trocar('#fbff24')"/>
+                </div>
         </ul>
     </nav>
     <main>
@@ -60,7 +65,8 @@
         <p>&copy; 2025 SpaceStore. Todos os direitos reservados.</p>
     </footer>
 
-    <script src="script.js"></script>
+     <script src="../js/color.js"></script>
+     <script src="./src/js/slideshow.js"></script>
 
 </body>
 </html>
