--- a/src/pages/quiz.html
+++ b/src/pages/quiz.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS EXTERNO -->
      <link rel="stylesheet" href="../css/style.css">
+     <link rel="stylesheet" href="../css/estilo.css">
+     
     <title>Quiz</title>
 </head>
 <body>
@@ -34,7 +36,8 @@
 </main>
 
 
-    <!-- JS EXTERNO -->
+    
+     <script src="../js/color.js"></script>
      <script src="../js/quiz.js"></script>
 </body>
 </html>
