Arrumei o estilo do index

--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Formulário da vinharia Agnello">
     <title>Contato</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="./src/assets/imgs/Favicon SpaceStore.jpg" type="image/jpeg">
 </head>
 <body class="contato">
     <nav>
