--- a/src/pages/quiz.html
+++ b/src/pages/quiz.html
@@ -6,7 +6,7 @@
     <!-- CSS EXTERNO -->
      <link rel="stylesheet" href="../css/style.css">
      <link rel="stylesheet" href="../css/estilo.css">
-     
+    <link rel="icon" href="./src/assets/imgs/Favicon SpaceStore.jpg" type="image/jpeg">
     <title>Quiz</title>
 </head>
 <body>
