--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>SpaceStore</title>
     <link rel="icon" href="./src/assets/imgs/Favicon SpaceStore.jpg" type="image/jpeg">
     <link rel="stylesheet" href="./src/css/style.css">
-
 </head>
 <body>
     <header>
@@ -20,10 +19,10 @@
             <li><a href="./src/pages/quiz.html">Quiz</a></li>
             <li><a href="./src/pages/loja.html">Loja</a></li>
             <div>
-                    <input type="button" class="cor" onclick="trocar('#3ae4b1')"/>
-                    <input type="button" class="cor" onclick="trocar('#c13af2')"/>
-                    <input type="button" class="cor" onclick="trocar('#fbff24')"/>
-                </div>
+                <input type="button" class="cor" onclick="trocar('#999')" id="botao1"/>
+                <input type="button" class="cor" onclick="trocar('#777')" id="botao2"/>
+                <input type="button" class="cor" onclick="trocar('#aaa')" id="botao3"/>
+            </div>
         </ul>
     </nav>
     <main>
@@ -33,8 +32,9 @@
         </section>
     </main>
 
+    <h2 id="txt">Produtos em Destaque</h2>
+
     <div class="produtos">
-        <h2>Produtos em Destaque</h2>
         <div class="produto">
             <img src="./src/assets/imgs/Caneca.png" alt="Caneca Constelar" class="amostra">
             <h3>Caneca Constelar</h3>
@@ -42,8 +42,8 @@
             <div><a href="#">Comprar agora</a></div>
         </div>
         <div class="produto">
-            <img src="./src/assets/imgs/Mac.png" alt="Mac&cheese" class="amostra">
-            <h3>Mac&cheese de astronauta</h3>
+            <img src="./src/assets/imgs/Mac.png" alt="Mac&Cheese" class="amostra">
+            <h3>Mac&Cheese de astronauta</h3>
             <p>Descrição do Produto 2</p>
             <div><a href="#">Comprar agora</a></div>
         </div>
@@ -58,7 +58,7 @@
             <h3>🛰️ Sobre a SpaceStore</h3>
             <p>Nascemos das estrelas para levar o futuro até você. Nossa missão é democratizar a tecnologia espacial, garantindo que você esteja sempre um passo à frente. Compre com a confiança de uma empresa intergaláctica.</p>
             <p>Junte-se à nossa frota de clientes satisfeitos e comece sua jornada!</p>
-        </section>
+    </section>
 
 
     <footer>
