--- a/src/pages/loja.html
+++ b/src/pages/loja.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Produtos e vinhos da Vinharia Agnello">
     <title>Produtos</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="./src/assets/imgs/Favicon SpaceStore.jpg" type="image/jpeg">
 </head>
 <body class="produto">
  <nav>
