--- a/src/pages/sobre.html
+++ b/src/pages/sobre.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Sobre - SpaceStore</title>
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="icon" href="./src/assets/imgs/Favicon SpaceStore.jpg" type="image/jpeg">
 </head>
 <body>
   <header>
