--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -12,10 +12,10 @@
 <body class="contato">
     <nav>
         <ul>
-            <li><a href="./src/pages/contato.html">Contato</a></li>
+            <li><a href="./contato.html">Contato</a></li>
             <li><a href="../../index.html">Início</a></li>
-            <li><a href="./src/pages/sobre.html">Sobre</a></li>
-            <li><a href="./src/pages/quiz.html">Quiz</a></li>
+            <li><a href="./sobre.html">Sobre</a></li>
+            <li><a href="./quiz.html">Quiz</a></li>
             <li><a href="./loja.html">loja</a></li>
             <div>
                     <input type="button" class="cor" onclick="trocar('#3ae4b1')"/>
