Adicionei imagens de produtos, arrumei o "compre agora" e arrumei o css

--- a/index.html
+++ b/index.html
@@ -38,25 +38,33 @@
         <div class="produto">
             <img src="./src/assets/imgs/Caneca.png" alt="Caneca Constelar" class="amostra">
             <h3>Caneca Constelar</h3>
-            <p>Descrição do Produto 1</p>
-            <div><a href="#">Comprar agora</a></div>
+            <p>Desperte o astronauta que existe em você com a Caneca Constelar! Ao adicionar uma bebida quente, as constelações ganham vida em um espetáculo cósmico de cores. Ideal para quem gosta de começar o dia com uma dose de café… e de universo. ☕✨</p>
+            <div><a href="./src/pages/loja.html">Comprar agora</a></div>
         </div>
         <div class="produto">
             <img src="./src/assets/imgs/Mac.png" alt="Mac&Cheese" class="amostra">
             <h3>Mac&Cheese de astronauta</h3>
-            <p>Descrição do Produto 2</p>
-            <div><a href="#">Comprar agora</a></div>
+            <p>O sabor das estrelas em cada mordida! Nosso Mac&Cheese de Astronauta é desidratado como nas verdadeiras missões espaciais — basta adicionar água quente e saborear uma explosão cremosa digna de quem conquistou o espaço. 🚀🍽️</p>
+            <div><a href="./src/pages/loja.html">Comprar agora</a></div>
         </div>
         <div class="produto">
             <img src="./src/assets/imgs/Telescopio.png" alt="Telescópio" class="amostra">
             <h3>Telescópio Espacial</h3>
-            <p>Descrição do Produto 3</p>
-            <div><a href="#">Comprar agora</a></div>
+            <p>Explore o infinito com o Telescópio Espacial — perfeito para observar estrelas, planetas e até seus próprios sonhos! Com lentes de alta precisão e design inspirado nas missões da NASA, ele é o presente ideal para curiosos e exploradores do cosmos. 🌌👁️‍🗨️</p>
+            <div><a href="./src/pages/loja.html">Comprar agora</a></div>
         </div>
     </div>
     <section id="sobre" class="secao-espacial">
             <h3>🛰️ Sobre a SpaceStore</h3>
-            <p>Nascemos das estrelas para levar o futuro até você. Nossa missão é democratizar a tecnologia espacial, garantindo que você esteja sempre um passo à frente. Compre com a confiança de uma empresa intergaláctica.</p>
+            <p>Bem-vindo à SpaceStore, a loja onde o universo está ao seu alcance! 🚀✨
+
+Nascida da paixão pelo espaço sideral, a SpaceStore oferece produtos únicos inspirados nas estrelas, planetas e mistérios do cosmos. Aqui, cada item é pensado para despertar a curiosidade, a imaginação e o espírito explorador que existe em cada um de nós.
+
+De canecas que brilham como constelações a telescópios espaciais que revelam o infinito, nossa missão é trazer um pedacinho do espaço para o seu dia a dia. 🌠
+
+Mais do que uma loja, somos uma experiência cósmica. Convidamos você a embarcar nessa viagem intergaláctica e descobrir um universo inteiro de produtos incríveis, criativos e cheios de energia estelar.
+
+🪐 SpaceStore — o espaço onde sua imaginação decola!</p>
             <p>Junte-se à nossa frota de clientes satisfeitos e comece sua jornada!</p>
     </section>
 
