--- a/src/pages/quiz.html
+++ b/src/pages/quiz.html
@@ -20,10 +20,10 @@
                 <li><a href="./src/pages/sobre.html">Sobre</a></li>
                 <li><a href="./quiz.html">Quiz</a></li>
                 <li><a href="./loja.html">loja</a></li>
-                <div>
-                    <input type="button" class="cor" onclick="trocar('#3ae4b1')"/>
-                    <input type="button" class="cor" onclick="trocar('#c13af2')"/>
-                    <input type="button" class="cor" onclick="trocar('#fbff24')"/>
+                <div class="cores">
+                    <input type="button" class="cor" onclick="trocar('#002b5b')"/>
+                    <input type="button" class="cor" onclick="trocar('#1e5128')"/>
+                    <input type="button" class="cor" onclick="trocar('#3a1078')"/>
                 </div>
             </ul>
         </nav>
