--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
         <ul>
             <li><a href="./src/pages/contato.html">Contato</a></li>
-            <li><a href="./index.html">Início</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="./src/pages/sobre.html">Sobre</a></li>
             <li><a href="./src/pages/quiz.html">Quiz</a></li>
             <li><a href="./src/pages/loja.html">Loja</a></li>
