--- a/src/pages/loja.html
+++ b/src/pages/loja.html
@@ -18,7 +18,7 @@
     <nav>
         <ul>
             <li><a href="./contato.html">Contato</a></li>
-            <li><a href="../../index.html">Início</a></li>
+            <li><a href="../../index.html">Home</a></li>
             <li><a href="./sobre.html">Sobre</a></li>
             <li><a href="./quiz.html">Quiz</a></li>
             <li><a href="./loja.html">Loja</a></li>
